[project]
name = "shodan-mcp-server"
version = "0.1.0"
description = "Master Control Program for Shodan API - Integrates with IDEs and AI assistants via MCP protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "shodan>=1.31.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.11.14",
]

# Note: When updating dependencies here, make sure to update requirements.txt as well
